--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 80px;
+    gap: 10px;
+    margin-top: -100px;
   }
   
   .button {
@@ -24,5 +25,6 @@
     font-size: 16px;
     color: white;
     background-color: #4e5254;
+    border-radius: 10px;
   }
       
