--- a/style.css
+++ b/style.css
@@ -28,3 +28,38 @@
     border-radius: 10px;
   }
       
+.men{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 50px;
+  
+}
+
+.menn{
+    background-color:red;
+    color: white;
+    text-align:center;
+    width:300px;
+    height:300px;
+    align-content:center;
+    font-size:5rem;
+    border:3px solid black;
+    border-radius: 150px;
+    cursor:pointer;
+}
+
+.mem{
+  background-image: ;
+    color: white;
+    text-align:center;
+    width:300px;
+    height:300px;
+    align-content:center;
+    font-size:5rem;
+    border:3px solid black;
+    border-radius: 10px;
+    cursor:pointer;
+}
