--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   gap: 50px;
   
 }
@@ -52,14 +53,13 @@
 }
 
 .mem{
-  background-image: ;
-    color: white;
-    text-align:center;
+    align-items: center;
     width:300px;
     height:300px;
-    align-content:center;
-    font-size:5rem;
-    border:3px solid black;
+    background-image: url('fantastic-four-2005.jpg');
     border-radius: 10px;
     cursor:pointer;
+    overflow: hidden;
+    background-size: cover;
+    
 }
