--- a/style.css
+++ b/style.css
@@ -41,13 +41,13 @@
 
 .menn{
     background-color:red;
-    color: white;
+    color: black;
     text-align:center;
     width:300px;
     height:300px;
     align-content:center;
     font-size:5rem;
-    border:3px solid black;
+    border:none;
     border-radius: 150px;
     cursor:pointer;
 }
@@ -62,4 +62,95 @@
     overflow: hidden;
     background-size: cover;
     
+}
+
+.up{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 30vh;
+  background-color: #301534;
+}
+
+.down{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 70vh;
+  background-color:#F9EDFF;
+  position: absolute;
+}
+
+.middle{
+  display:grid;
+  width: 500px;
+  height: 500px;
+  background-color:#FFFFFF;
+  position: relative;
+  margin-top: -100px;
+  border-radius: 10px;
+  margin-left: 30%;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.middle .seperate{
+  display: flex;
+  justify-content: left;
+  gap: 30px;
+  
+}
+
+.white{
+  color:red;
+}
+
+.middle .text{
+  font-size: 2rem;
+}
+
+
+.middle .bi-star-fill{
+  color:#A724E6;
+  font-size: 1.5rem;
+}
+
+/* .middle .side{
+  display: grid;
+  justify-content: space-evenly;
+  gap: 0px;
+} */
+
+.middle .bi-plus-circle{
+  color:#B928EE;
+  font-size: 1.0rem;
+  float: right;
+  top: 5px;
+}
+
+#first .para{
+  font-size: 1rem;
+  padding-top: 10px;
+  color: #ABA0AB;
+}
+
+
+#second .para{
+  font-size: 1rem;
+  padding-top: 10px;
+  color: #ABA0AB;
+}
+
+#third .para{
+  font-size: 1rem;
+  padding-top: 10px;
+  color: #ABA0AB;
+}
+
+#fourth .para{
+  font-size: 1rem;
+  padding-top: 10px;
+  color: #ABA0AB;
 }
