--- a/style.css
+++ b/style.css
@@ -108,7 +108,10 @@
 }
 
 .middle .text{
-  font-size: 2rem;
+  font-size: 1.5rem;
+  color: #341938;
+  font-family: 'Gill Sans', 'Gill Sans MT','Trebuchet MS';
+  font-weight: bold;
 }
 
 
@@ -134,6 +137,8 @@
   font-size: 1rem;
   padding-top: 10px;
   color: #ABA0AB;
+  border-bottom: 2px solid #FAEDFF;
+  padding-bottom: 10px;
 }
 
 
@@ -141,16 +146,22 @@
   font-size: 1rem;
   padding-top: 10px;
   color: #ABA0AB;
+  border-bottom: 2px solid #FAEDFF;
+  padding-bottom: 10px;
 }
 
 #third .para{
   font-size: 1rem;
   padding-top: 10px;
   color: #ABA0AB;
+  border-bottom: 2px solid #FAEDFF;
+  padding-bottom: 10px;
 }
 
 #fourth .para{
   font-size: 1rem;
   padding-top: 10px;
   color: #ABA0AB;
+  border-bottom: 2px solid #FAEDFF;
+  padding-bottom: 10px;
 }
