--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
   background-color:#FFFFFF;
   position: relative;
   margin-top: -100px;
-  border-radius: 10px;
+  border-radius: 25px;
   margin-left: 30%;
   overflow: hidden;
   padding: 20px;
@@ -150,27 +150,42 @@
   display: none;
 }
 
-
-/* #second .para{
-  font-size: 1rem;
-  padding-top: 10px;
-  color: #ABA0AB;
-  border-bottom: 2px solid #FAEDFF;
-  padding-bottom: 10px;
+.firt{
+  background-color:#C5E4E7;
+  height: 80vh;
+  width: 80vw;
 }
 
-#third .para{
-  font-size: 1rem;
-  padding-top: 10px;
-  color: #ABA0AB;
-  border-bottom: 2px solid #FAEDFF;
-  padding-bottom: 10px;
+.first{
+  padding-top: 80px;
 }
 
-#fourth .para{
-  font-size: 1rem;
-  padding-top: 10px;
-  color: #ABA0AB;
-  border-bottom: 2px solid #FAEDFF;
-  padding-bottom: 10px;
-} */
+.mid{
+  text-align: center;
+  font-family:'Times New Roman', Times, serif;
+  font-size: 20px;
+  color: #46686A;
+}
+
+.sec{
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  padding-top: 40px;
+}
+.downn{
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  width: 110vh;
+  height: 60vh;
+}
+
+.middlee{
+  position: absolute;
+  background-color: #341938;
+  height: 50vh;
+  width: 55vh;
+  border-radius: 20px;
+
+}
+
